# coil-resvg

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish.yml
coil-resvg/: build.gradle.kts
coil-resvg-decoder/: build.gradle.kts
coil-resvg-decoder/src/androidMain/kotlin/com/hashsequence/coilresvg/: ResvgDecoder.android.kt
coil-resvg-decoder/src/commonMain/kotlin/com/hashsequence/coilresvg/: ResvgDecoder.kt
coil-resvg-decoder/src/commonMain/rust/src/: libs.rs
coil-resvg-decoder/src/iosMain/kotlin/com/hashsequence/coilresvg/: ResvgDecoder.ios.kt
coil-resvg-decoder/src/jsMain/kotlin/com/hashsequence/coilresvg/: ResvgDecoder.js.kt
coil-resvg-decoder/src/jvmMain/kotlin/com/hashsequence/coilresvg/: ResvgDecoder.jvm.kt
coil-resvg-decoder/src/wasmJsMain/kotlin/com/hashsequence/coilresvg/: ResvgDecoder.wasmJs.kt
coil-resvg/src/androidMain/kotlin/com/hashsequence/coilresvg/: ResvgDecoder.android.kt
coil-resvg/src/commonMain/kotlin/com/hashsequence/coilresvg/: ResvgDecoder.kt
coil-resvg/src/commonMain/rust/: Cargo.toml
coil-resvg/src/iosMain/kotlin/com/hashsequence/coilresvg/: ResvgDecoder.ios.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/wasmJsMain/resources/: index.html
composeApp/src/webMain/resources/: index.html
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
resvg-core/: Cargo.toml
resvg-core/src/: libs.rs
(+66 files in other folders)
