[package]
name = "resvg-core"
version = "0.1.0"
edition = "2021"

[dependencies]
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
uniffi = "0.29"
thiserror = "2.0"
fontdb = "0.23"

# 让 debug profile 也开启优化，验证 release 性能
[profile.dev]
opt-level = 3

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/libs.rs"
