[package]
name = "resvg-core"
version = "1.0.0"
edition = "2021"

[dependencies]
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
uniffi = "0.29"
thiserror = "2.0"
fontdb = "0.23"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/libs.rs"
